[metadata]
name = kosu
version = attr: kosu.__version__
author = Agile Scientific
author_email = hello@agilescientific.com
description = Build and maintain courses using Jupyter Notebooks.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/agile-geoscience/kosu
classifiers =
    Intended Audience :: Education
    Development Status :: 3 - Alpha
    Natural Language :: English
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = kosu
python_requires = >=3.9
install_requires =
    nbstripout
    click
    Jinja2
    pyyaml
    requests
    boto3

[options.extras_require]
test = pytest; pytest-cov

[options.entry_points]
console_scripts =
    kosu = kosu:cli

[options.package_data]
* = include/*
