[metadata]
name = kosu
version = attr: kosu.__version__
author = Agile Scientific
author_email = hello@agilescientific.com
description = Build and maintain courses using Jupyter Notebooks.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/agilescientific/kosu
classifiers =
    Intended Audience :: Education
    Development Status :: 3 - Alpha
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = kosu
python_requires = >=3.6
install_requires =
    nbstripout
    click
    Jinja2
    pyyaml
    requests

[options.extras_require]
aws = boto3
test = pytest; pytest-cov
docs = sphinx; myst_parser; furo
dev = pytest; pytest-cov; sphinx; myst_parser; furo

[options.entry_points]
console_scripts =
    kosu = kosu:cli

[options.package_data]
kosu = include/*, include/.*
